[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/decoration.gd" type="Script" id=1]
[ext_resource path="res://img/spot.png" type="Texture" id=2]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=3]

[node name="Decoration" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="DepthController" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="hide" from="DepthController" to="." method="_on_hide"]
[connection signal="show" from="DepthController" to="." method="_on_show"]
